@@ -104,7 +104,7 @@
         </dependency>
         <dependency>
             <groupId>org.powermock</groupId>
-            <artifactId>powermock-api-mockito</artifactId>
+            <artifactId>powermock-api-mockito2</artifactId>
             <scope>test</scope>
             <version>${org.powermock.version}</version>
         </dependency>
@@ -174,6 +174,13 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven.surefire.plugin.version}</version>
                 <configuration>
+                    <argLine>
+                        --add-opens java.base/jdk.internal.loader=ALL-UNNAMED
+                        --add-opens java.base/jdk.internal.reflect=ALL-UNNAMED
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.base/java.util=ALL-UNNAMED
+                        --add-opens java.base/java.security=ALL-UNNAMED
+                    </argLine>
                     <suiteXmlFiles>
                         <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
                     </suiteXmlFiles>
@@ -195,7 +202,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 
-        <maven.surefire.plugin.version>2.18.1</maven.surefire.plugin.version>
+        <maven.surefire.plugin.version>2.22.2</maven.surefire.plugin.version>
 
         <!--Carbon Kernel Version-->
         <carbon.kernel.version>4.6.0</carbon.kernel.version>
@@ -232,7 +239,7 @@
 
         <!-- Test lib versions -->
         <testng.version>6.9.10</testng.version>
-        <org.powermock.version>1.7.4</org.powermock.version>
-        <jacoco.version>0.7.9</jacoco.version>
+        <org.powermock.version>2.0.9</org.powermock.version>
+        <jacoco.version>0.8.7</jacoco.version>
     </properties>
 </project>
